# rs4j

./: .gitignore  Cargo.toml  README.md  demo.rs  demo.rs4j  run_demo.sh
.github/workflows/: badge.yaml
complex-example/: Cargo.toml  README.md  build.rs  post-build.rs
complex-example/bindings/: MyOtherStruct.rs4j  MyStruct.rs4j  StrVec.rs4j
complex-example/java/: .gitignore  build.gradle.kts  settings.gradle.kts
complex-example/java/src/main/java/com/example/: App.java
complex-example/src/: bindings.rs  lib.rs
demo/org/stardustmodding/rs4j/demo/: Duration.java
docs/: .gitignore  conv.md  jni.md
docs/docs-test/: Cargo.toml
docs/docs-test/src/: lib.rs  my_other_struct.rs  my_struct.rs
docs/java/: App.java  MyOtherStruct.java  MyStruct.java  ParentClass.java  org_stardustmodding_rs4j_docs_example_complex_MyOtherStruct.h  org_stardustmodding_rs4j_docs_example_complex_MyStruct.h
docs/java/headers/: org_stardustmodding_rs4j_docs_example_complex_MyOtherStruct.h  org_stardustmodding_rs4j_docs_example_complex_MyStruct.h
docs/run-test/: manifest.txt
example/: Cargo.toml  build.rs  post-build.rs
example/bindings/: MyStruct.rs4j  hello.rs4j
example/java/: build.gradle.kts  settings.gradle.kts
example/java/src/main/java/com/example/: App.java
example/src/: bindings.rs  lib.rs
hljs/: package.json  pnpm-lock.yaml
hljs-demo/: package.json  pnpm-lock.yaml  vite.config.ts
hljs-demo/src/: main.ts
hljs/src/: index.ts
src/: NativeLoader.java  NativeTools.java  base.rs  build.rs  conv.rs  gen.rs  generate.rs  include.rs  java.rs  lib.rs  loader.rs  macros.rs  main.rs  parser.rs  types.rs
src/class/: arg.rs  base.rs  conv.rs  ctx.rs  expr.rs  field.rs  generic.rs  method.rs  mod.rs  native.rs  ty.rs  wrapper.rs
src/class/templates/: setter.rs.tmpl  wrapper_method.java.tmpl
src/codegen/: cx.rs  gen.rs  java.rs  mod.rs  rust.rs
src/internal/: base.rs  include.rs  mod.rs
src/java/: NativeClass.java  NativeClass.kt  NativeLoader.java  NativeLoader.kt  NativeTools.java  NativeTools.kt  NativeUtils.kt  ParentClass.java  ParentClass.kt  mod.rs
src/parser/: bound.rs  class.rs  expr.rs  field.rs  func.rs  mod.rs  parser.rs  ty.rs
vscode/: package.json  pnpm-lock.yaml
vscode/syntaxes/: rs4j.iro  rs4j.tmLanguage  rs4j.tmLanguage.json  rs4j.tmLanguage.yml
