[package]
name = "rs4j"
version = "0.7.0"
edition = "2021"
authors = ["RedstoneWizard08", "Stardust Modding Contributors"]
license = "MIT"
description = "A small, automatic, efficient, and easy-to-use Rust to Java bridge."
homepage = "https://github.com/StardustModding/rs4j"
repository = "https://github.com/StardustModding/rs4j"
keywords = ["ffi", "bridge", "extern", "java", "interop"]
exclude = ["vscode"]

[features]
default = []
cli = ["dep:clap", "dep:serde_json"]

[[bin]]
name = "rs4j"
required-features = ["cli"]

[dependencies]
anyhow = "1.0.89"
convert_case = "0.6.0"
jni = "0.21.1"
peg = "0.8.4"

clap = { version = "4.5.18", features = ["derive"], optional = true }
serde_json = { version = "1.0.128", optional = true }
dircpy = "0.3.19"
glob = "0.3.1"
regex = "1.10.6"

[workspace]
resolver = "2"
members = ["./example", "docs/docs-test"]
