[package]
name = "rs4j"
version = "0.10.0"
edition = "2021"
authors = ["RedstoneWizard08", "Stardust Modding Contributors"]
license = "MIT"
description = "A small, automatic, efficient, and easy-to-use Rust to Java bridge."
homepage = "https://github.com/StardustModding/rs4j"
repository = "https://github.com/StardustModding/rs4j"
exclude = ["vscode", "hljs", "hljs-demo", "example"]
keywords = [
    "ffi",
    "bridge",
    "extern",
    "java",
    "interop",
    "jni",
    "native",
    "bindings",
    "bindgen",
    "peg",
]

[features]
default = []
build = ["dep:dircpy", "dep:glob", "dep:regex"]
cli = ["build", "dep:clap", "dep:serde_json"]

[[bin]]
name = "rs4j"
required-features = ["cli"]

[dependencies]
anyhow = "1.0.89"
convert_case = "0.6.0"
jni = "0.21.1"
peg = "0.8.4"

clap = { version = "4.5.18", features = ["derive"], optional = true }
serde_json = { version = "1.0.128", optional = true }
dircpy = { version = "0.3.19", optional = true }
glob = { version = "0.3.1", optional = true }
regex = { version = "1.10.6", optional = true }

[workspace]
resolver = "2"
members = ["example"]
