[package]
name = "rs4j"
version = "0.10.2"
edition = "2024"
authors = ["RedstoneWizard08", "Stardust Modding Contributors"]
license = "MIT"
description = "A small, automatic, efficient, and easy-to-use Rust to Java bridge."
homepage = "https://github.com/StardustModding/rs4j"
repository = "https://github.com/StardustModding/rs4j"
exclude = ["vscode", "hljs", "hljs-demo", "example"]
keywords = ["ffi", "bridge", "extern", "java", "interop"]

[features]
default = []
build = ["dep:glob", "dep:regex"]
cli = ["build", "dep:clap", "dep:serde_json"]

[[bin]]
name = "rs4j"
required-features = ["cli"]

[dependencies]
anyhow = "1.0.100"
convert_case = "0.8.0"
jni = "0.21.1"
peg = "0.8.5"

clap = { version = "4.5.50", features = ["derive"], optional = true }
serde_json = { version = "1.0.145", optional = true }
glob = { version = "0.3.3", optional = true }
regex = { version = "1.12.2", optional = true }

[workspace]
resolver = "2"
members = ["example", "complex-example"]

[package.metadata.docs.rs]
all-features = true
