[package]
name = "example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = []
post-build = ["anyhow"]

[[bin]]
name = "post-build"
path = "post-build.rs"
required-features = ["post-build"]

[dependencies]
anyhow = { version = "1.0.89", optional = true }
rs4j = { path = ".." }

[build-dependencies]
anyhow = "1.0.89"
rs4j = { path = ".." }
